# sporty_home_task

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
api/: betting_api.py  client.py  endpoints.py  models.py  swagger.json
docs/: 1_test_plan.md  2_manual_cheklist.md  2_manual_test_execution.md  3_manual_test_bug_reports.md  3_test_bug_reports.md  4_strategy_and_recomendation.md
frame/: logger.py
pages/: base_page.py  elements.py  home_page.py  locators.py
tests/api/: add_root.py  conftest.py  pytest.ini  test_balance.py
tests/ui/: conftest.py  test_e2e_happy_path.py
